# famews

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  environment_linux.yml  mypy.ini  pyproject.toml  setup.py
config/: group_hirid_complete.yaml  group_mimic_complete.yaml  lgbm_10seeds_fairness.gin  lgbm_10seeds_pred.yaml  lgbm_10seeds_train.yaml  lgbm_base.yaml  lgbm_base_fairness.gin  lgbm_base_pred.gin  lgbm_base_train.gin  lgbm_test.gin  lstm_base_fairness.gin  lstm_base_pred.gin  lstm_base_train.gin  lstm_test.gin
config/example/: lgbm_test_var_selection.gin  lstm_test.gin  lstm_test.yaml
data/: .gitignore
data/models/lgbm_base/: model.joblib
data/sample_reports/: info.md
documentation/: DETAILED_DOC.md
famews/: README.md  setup.py
famews/data/: utils.py
famews/data/hirid/: reading.py
famews/fairness_check/: analysis_pipeline.py  metrics.py  metrics_wrapper.py
famews/fairness_check/deterioration_allocation/: analyse_da_auc.py
famews/fairness_check/feature_importance/: analyse_feature_importance.py  helper_rbo.py  helper_shap_values.py  rbo.py
famews/fairness_check/medical_variables/: build_table.py  draw_graph.py
famews/fairness_check/missingness/: analyse_missingness.py  build_table.py  draw_graph.py
famews/models/: encoders.py
famews/scripts/: run_fairness_analysis.py  submit_wrapper.py  train_sequence_model.py
famews/train/: pipeline.py  sequence.py  utils.py
famews/utils/: handle_predictions.py
tests/: conftest.py
tests/fairness_check/: conftest.py  test_analysis_pipeline.py  test_setup.py
(+49 files in other folders)
