[tool.poetry]
name = "famews"
version = "0.1.2"  # Replace with the actual version from get_version("famews/__init__.py")
description = "FAMEWS: A Fairness Auditing tool for Medical Early-Warning Systems"
authors = ["Marine Hoche <email@example.com>", "Olga Mineeva <email@example.com>", "Manuel Burger <email@example.com>", "Alessandro Blasimme <email@example.com>", "Gunnar Rätsch <email@example.com>"]
license = "MIT"
repository = "https://github.com/ratschlab/famews"
keywords = ["Fairness", "Machine Learning", "Early-Warning System"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "<2.1.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
mypy = "^1.11.2"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
gin-config = "^0.5.0"
coolname = "^2.2.0"
wandb = "^0.18.2"
lightgbm = "^4.5.0"
plotly = "^5.24.1"
shap = "^0.46.0"
pathos = "^0.3.2"
scikit-fda = "^0.9.1"
coloredlogs = "^15.0.1"
reportlab = "^4.2.4"
daindex = "^0.2.6"
tables = "^3.10.1"
pytorch-lightning = "^2.4.0"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
py_version = 39
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"